Fixes spacing in homepage footer

--- a/app/_scss/home/footer.scss
+++ b/app/_scss/home/footer.scss
@@ -74,11 +74,18 @@
 		height: 70%;
 
 		a {
-			display: block;
 			font-size: 1.6em;
 			line-height: 1.2em;
 			white-space: inherit;
-			margin: 0; padding: 0.15em;
+			margin: 0; padding: 0.25em 0;
+		}
+
+		a:link, a:visited {
+			box-shadow: 0.5em 0 0 #829192, -0.5em 0 0 #829192;
+		}
+
+		a:hover, a:active {
+			box-shadow: 0.5em 0 0 #e9e9e9, -0.5em 0 0 #e9e9e9;
 		}
 	}
 }
